refactor: Redo bfs and section queue system, merge iterations of sections into bfs (WIP)